# Auxiliary-Agents

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: auth.py  capture.py  clarify.py  collaborators.py  library.py  notifications.py  review.py  sop.py  workflows.py
backend/app/core/: artifacts.py  assembly.py  auth_stub.py  authz.py  background.py  pdf.py  sop_cache.py
backend/app/db/: collaborators.py  library.py  notifications.py  session.py  sources.py  versions.py  workflows.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/models/: db.py  graph.py
backend/app/services/: gemini_client.py  openai_client.py
backend/app/skills/delta_extraction/: SKILL.md  __init__.py  apply.py  skill.py  types.py
backend/app/skills/diagram_review/: SKILL.md  __init__.py  skill.py
backend/app/skills/embedding/: SKILL.md  __init__.py  skill.py
backend/app/skills/screen_analysis/: SKILL.md  (+2 more)
backend/tests/: test_assembly_atomic.py  test_assembly_formatting.py  test_auth_stub.py  test_authz.py  test_capture_contract.py  test_delta_apply.py  test_endpoint_gates.py  test_eval_fixtures.py  test_eval_runner.py  test_eval_scorers.py  test_extract_guards.py  test_extract_terminal_correction.py  test_graph.py  test_library_search.py  test_skill_contracts.py  test_skill_contracts_v2.py  test_sop_cache.py  test_source_ingestion.py
backend/tests/eval/: __init__.py  fixtures.py  report.py  runner.py  scorers.py
(+60 files in other folders)
