[project]
name = "agentic-ops-backend"
version = "0.1.0"
description = "Agentic Ops MVP backend"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "asyncpg>=0.29",
  "fastapi>=0.115",
  "google-genai>=1.0",
  "markdown>=3.7",
  "openai>=1.99",
  "openai-agents>=0.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-multipart>=0.0.9",
  "sqlalchemy[asyncio]>=2.0",
  "uvicorn[standard]>=0.30",
  "weasyprint>=62.3",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
